# Tucil1_13524101

./: .gitignore  README.md
src/: ApplicationFlow.qml  CMakeLists.txt  Colors.qml  CustomButton.qml  CustomToolBarForm.ui.qml  Home.qml  HomeForm.ui.qml  HowToPlay.qml  HowToPlayForm.ui.qml  InputScreen.qml  InputScreenForm.ui.qml  Main.qml  ResultsScreen.qml  ResultsScreenForm.ui.qml  SolvingScreen.qml  SolvingScreenForm.ui.qml  main.cpp  queens.cpp
src/backend/: queenscontroller.cpp  queenscontroller.h  queensmodel.cpp  queensmodel.h  queensparser.cpp  queensparser.h  queenssolver.cpp  queenssolver.h
test/: test10_6x7.txt  test2_8x8.txt  test3_7x7.txt  test4_6x6.txt  test5_5x5.txt  test6_4x4.txt  test7_10x10.txt  test8_11x11.txt  test9_26x26.txt
